// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a button appropriately for admin repos  1`] = `
<button
  className="repo-toggle"
  disabled={null}
  onClick={[Function]}
>
  Activate
</button>
`;

exports[`renders a button appropriately for non-admin repos  1`] = `
<div
  className="repo-restricted"
>
  Only repo admins can activate
</div>
`;

exports[`renders a disabled button appropriately for admin repos 1`] = `
<button
  className="repo-toggle"
  disabled="disabled"
  onClick={[Function]}
>
  Activate
</button>
`;
